# boobytrap

./: .gitignore  Cargo.toml  README.md  boobytrap.service  install.sh  run.sh  tw.service
config/: Settings.toml  file_mon_blacklist
src/: actions.rs  boobytrap.rs  default_config.rs  devices.rs  main.rs  network.rs  notify.rs  tw.rs
src/monitors/: devices.rs  filechanges.rs  mod.rs  network.rs  ssh_burn_file.rs
src/monitors/actions/: mod.rs
src/monitors/notify/: mod.rs
