[package]
name = "boobytrap"
version = "0.1.6"
edition = "2021"
description = "Detect and Act on unauthorized access of any kind from any source."
authors = ["jkoontsiii@gmail.com"]
license = "MIT"
repository = "https://github.com/helloimalemur/boobytrap"
keywords = ["file-integrity", "filesystem-integirty", "change-detection", "boobytrap"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httping = "0.1.9"
discord-webhook-lib = "0.1.7"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
config = "0.14.1"
anyhow = "1.0.93"
reqwest = "0.12.9"
chrono = "0.4.38"
filesystem-hashing = "0.3.4"
bytes = "1.8.0"
whoami = "1.5.2"
blake3 = "1.5.4"
walkdir = "2.5.0"
#netstat = "0.7.0"
